@@ -663,6 +663,20 @@ class Session(object):
 					print "[%i] Error: Invalid update interval for '%s' MIB entry '%i'" % (os.getpid(), key, self.updateMIB[key])
 				failures += 1
 				
+		if self.spcSetup[0] > 0 or self.spcSetup[1] > 0 or self.spcMetatag is not None:
+			if self.spcSetup[0] not in (2, 4, 8, 16, 32, 64, 128, 256, 512, 1024, 2048, 4096, 8192):
+				if verbose:
+					print "[%i] Error: Invalid DR spectrometer channel count '%i'" % (os.getpid(), self.spcSetup[0])
+				failures += 1
+			if self.spcSetup[1] not in (384, 768, 1536, 3072, 6144, 12288, 24576, 49152, 98304, 196608):
+				if verbose:
+					print "[%i] Error: Invalid DR spectrometer integration count '%i'" % (os.getpid(), self.spcSetup[1])
+				failures += 1
+			if self.spcMetatag not in (None, '{Stokes=XXYY}', '{Stokes=IQUV}', '{Stokes=IV}'):
+				if verbose:
+					print "[%i] Error: Invalid DR spectrometer mode '%s'" % (os.getpid(), self.spcMetatag)
+				failures += 1
+				
 		observationCount = 1
 		for obs in self.observations:
 			if verbose:
