@@ -8,6 +8,7 @@
   * Added a time estimating progress bar to lsl.common.progress
   * Fixed the data scaling in the SoftwareDP _processStreamFilter() function
   * Fixed the integration time stored in the FITS IDI files generated by correlateTBW.py
+  * Added validation for the DR spectrometer channels/integration count/mode in an SDF
 
 0.6.3
   * Fixed a typo. in lsl.imaing.utils.pruneBaselineRange() function
